--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-safe-area-context": "^4.14.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "@expo/vector-icons": "^14.0.2"
   },
