--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
-    "expo": "52.0.42",
+    "axios": "^0.27.2",
+    "expo": "~52.0.46",
     "expo-linear-gradient": "~14.0.2",
     "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9",
+    "react-native": "^0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
